arreglo de errores

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,4 @@
+# PRODUCTION CONFIG - NETLIFY
 VITE_API_URL=https://backendgridbarbers.onrender.com/api
+VITE_APP_NAME=Grid Barbers
+VITE_APP_VERSION=2.0.0
